
>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

August 3 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Corrected a fatal bug in the bonefile code
	* The holy banana's big explosion damage reduced to half
	* Added some magic resistance to powerful named monsters
	* The AI is now able to use teleport control
	* The AI now uses ESP more efficiently
	* Sherarax and Ischaldirh are again several times more insane
	* Plants etc. again can't follow or be displaced
	* Corrected a minor outlook bug in the explosion code

August 2 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Fly symbols are again displayed correctly

August 1 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Bunnies no longer can open doors
	
July 31 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Nobody can walk in dungeon to the edge tiles.
	
July 31 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Vladimir now changes color all the time
	* The banana growers no longer defend Decos

July 31 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Opening book cases is easier (just walk towards one)

July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Adjusted Legifer's, Cleptia's, Nefas's and Infuscor's pray effects somewhat

July 30 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Mistress' weaponskill increased
	
July 30 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Corrected a fatal bug in the dig code
	* Fixed a small bug in the consuming code which could create fleshless
	  holy bananas
	* Removed a tiny abusable bug in the teleport control code
	* Broken thunder hammers no longer emit light
	* Eliminated a minor bug in the clone experience behaviour
	* Destroyed an ugly bug that occurred when teleporting vesana
